samples/_failures_safe/1761705720_5925cf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1dc020cf.c: In function ‘main’:
./samples/SAFE/__tmp_1dc020cf.c:151:5: error: expected declaration or statement at end of input
  151 |     printf("ERROR: %d\n", level_counts[3]);
      |     ^~~~~~
